--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -71,6 +71,7 @@
 @media screen and (max-width: 550px) {
   .nav-container {
     height: 7rem;
+    overflow-x: hidden;
   }
   .home-nav {
     font-size: 1.4rem;
