--- a/src/Pages/Cart/CartDetails.css
+++ b/src/Pages/Cart/CartDetails.css
@@ -67,7 +67,7 @@
   font-weight: bold;
 }
 .cart-item-card-btn > button:hover {
-  background-color: var(--dark-primary-color);
+  background-color: var(--secondary-color);
 }
 .item-add-wishlist > button {
   background-color: var(--white);
