--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   --primary-color: #e3bd23;
   --dark-primary-color: #816907;
   --secondary-color:#a19400;
+
+  --primary-color: #4F709C ;
+  --secondary-color:#213555;
   --white: #ffffff;
   --gray:gray;
 }
