--- a/src/Components/ProductsFilter/ProductsFilter.css
+++ b/src/Components/ProductsFilter/ProductsFilter.css
@@ -1,6 +1,6 @@
 .filter-container{
     border-right: 1px solid lightgray;
-    box-shadow: 0px 5px 15px 0px var(--primary-color);
+    box-shadow: 0px 5px 10px 0px var(--gray);
     /* height: 87vh; */
     height: 100vh;
     display: flex;
