--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -1,11 +1,15 @@
 .cart-container{
-    margin: 0rem auto;
+    margin: 1rem auto;
     text-align: center;
     overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.cart-container>h2{
+    color: var(--primary-color);
+}
 .empty-cart{
     margin-top: 2rem;
+    color: var(--primary-color);
 }
 .cart-details-main{
     padding: 1rem;
@@ -28,7 +32,7 @@
     flex-wrap: wrap;
     margin: 1.5rem;
     margin-right: 20rem;
-    box-shadow: 0px 5px 15px 0px var(--primary-color);
+    box-shadow: 0px 5px 10px 0px var(--gray);
 }
 
 
@@ -38,7 +42,7 @@
     right: 5rem;
     width: 22rem;
     height: 24rem;
-    box-shadow: 0px 5px 15px 0px var(--primary-color);
+    box-shadow: 0px 5px 10px 0px var(--gray);
     padding: 2rem 1rem;
     text-align: left;
 }
@@ -57,7 +61,7 @@
     margin-top: 1rem;
   }
   .cart-price-card-btn > button:hover {
-    background-color: var(--dark-primary-color);
+    background-color: var(--secondary-color);
   }
 
 
