--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -18,7 +18,7 @@
 .checkout-address-details{
     display: flex;
     padding: 1rem;
-    border: 1px dashed var(--primary-color);
+    border: 1px dashed var(--gray);
     border-radius: 5px;
     box-shadow: none;
 }
@@ -27,10 +27,10 @@
 }
 .address-bg{
     border: none;
-    box-shadow: 0px 0px 15px 0px var(--primary-color);
+    box-shadow: 0px 0px 10px 0px var(--gray);
 }
 .checkout-order-summary{
-    box-shadow: 0px 0px 15px 0px var(--primary-color);
+    box-shadow: 0px 0px 10px 0px var(--gray);
     width: 20rem;
     padding-top: 1rem;
     margin-bottom: 2rem;
@@ -87,7 +87,7 @@
     margin-bottom: 1rem;
   }
   .checkout-btn > button:hover {
-    background-color: var(--dark-primary-color);
+    background-color: var(--secondary-color);
   }
   .delivery-address{
     text-align: center;
