--- a/src/Pages/UserProfile/UserProfile.css
+++ b/src/Pages/UserProfile/UserProfile.css
@@ -2,7 +2,7 @@
     width: 25rem;
     min-height: 20rem;
     margin: 3rem auto;  
-    box-shadow: 0px 5px 15px 0px var(--primary-color);
+    box-shadow: 0px 5px 10px 0px var(--gray);
     font-family: "Poppins", sans-serif;
 }
 .address-container{
