--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -11,7 +11,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  /* padding: 3rem 4rem; */
   padding: 3rem 1.5rem;
   margin-left: 270px;
   overflow-x: hidden;
@@ -22,6 +21,7 @@
   gap: 1rem;
   margin-left: 1rem;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: var(--primary-color);
 }
 .product-list-header>h2{
   font-size: 1.2rem;
