--- a/src/Pages/LoginRegister/LoginRegister.css
+++ b/src/Pages/LoginRegister/LoginRegister.css
@@ -51,6 +51,9 @@
     color: white;
     font-size: 1rem;
 }
+.auth-btn>button:hover{
+    background-color: var(--secondary-color);
+}
 .auth-text{
     margin-top: 1.5rem;
     cursor: pointer;
