--- a/src/Components/ProductsFilter/ProductsFilter.css
+++ b/src/Components/ProductsFilter/ProductsFilter.css
@@ -1,7 +1,6 @@
 .filter-container{
     border-right: 1px solid lightgray;
     box-shadow: 0px 5px 10px 0px var(--gray);
-    /* height: 87vh; */
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -19,6 +18,9 @@
 .filter-heading>p{
     cursor: pointer;
     text-decoration: underline;
+}
+.filter-heading>p:hover{
+    color: var(--primary-color);
 }
 .filter-price{
   margin-top: 2.3rem;
