--- a/src/Pages/LoginRegister/LoginRegister.css
+++ b/src/Pages/LoginRegister/LoginRegister.css
@@ -2,7 +2,7 @@
     width: 25rem;
     height: 23rem;
     margin: 5rem auto;
-    box-shadow: 0px 7px 29px 0px var(--primary-color);
+    box-shadow: 0px 5px 10px 0px var(--gray);
 }
 .register-auth-container{
     height: 28rem;
