--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
   height: 5rem;
   display: flex;
   flex-wrap: wrap;
+  flex-grow: 2;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -69,7 +70,7 @@
 }
 /* ________________________________________________ */
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 750px) {
   .nav-container {
     height: 7rem;
     overflow-x: hidden;
@@ -107,9 +108,9 @@
     margin-right: 1px;
   }
   .icon > span {
-    width: 17px;
-    height: 17px;
-    font-size: 10px;
+    width: 13px;
+    height:13px;
+    font-size: 12px;
     left: 10px;
   }
 }
