--- a/src/Pages/Wishlist/Wishlist.css
+++ b/src/Pages/Wishlist/Wishlist.css
@@ -18,7 +18,6 @@
     justify-content: space-around;
 }
 .wishlist-main{
-    /* border: 1px solid; */
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
@@ -27,7 +26,7 @@
 }
 .wishlist-details{
     width: 32rem;
-    height: 16rem;
+    min-height: 15rem;
     height: 17.5rem;
     display: flex;
     flex-direction: column;
@@ -45,9 +44,9 @@
 
 /* ____________________________________________________________________ */
 
-@media screen and (max-width:550px){
+@media screen and (max-width:750px){
     .wishlist-details{
-        width: 21rem;
+        width: 20rem;
         height: 14rem;
     }
 }
