--- a/src/Pages/LoginRegister/LoginRegister.css
+++ b/src/Pages/LoginRegister/LoginRegister.css
@@ -38,6 +38,12 @@
 .auth-div>label{
     color: rgb(0,0,0,0.4);
 }
+.pw{
+    position: relative;
+    left: 13rem;
+    bottom: 1.4rem;
+    cursor: pointer;
+}
 .auth-btn{
     margin-top: 1.4rem;
 }
