--- a/src/Pages/Wishlist/Wishlist.css
+++ b/src/Pages/Wishlist/Wishlist.css
@@ -6,6 +6,7 @@
 }
 .wishlist-container>h2{
     color: var(--primary-color);
+    text-transform: uppercase;
 }
 .empty-wishlist{
     margin-top: 2rem;
@@ -40,6 +41,11 @@
     width: 20rem;
     height: 20rem;
     box-shadow: 0px 5px 15px 0px var(--primary-color);
+}
+.empty-wishlist-img{
+    padding: 2rem;
+    width: 22rem;
+    height: 15rem;
 }
 
 /* ____________________________________________________________________ */
