--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -13,13 +13,18 @@
     padding-top: 2.5rem;
 }
 .bg-img-container {
-    background-image: url('../../assets/cover.jpg');
     background-position: center;
     background-size: cover;
     height: 30rem;
     opacity: 0.9;
     background-size:contain;
     cursor: pointer;
+}
+.carousel-1{
+    background-image: url('../../assets/cover.jpg') !important;
+}
+.carousel-2{
+    background-image: url('../../assets/cover1.jpg') !important;
 }
 .home-btn{
     margin:10rem;
